# learning-physics

./: CMakeLists.txt  CMakeUserPresets.json  Cargo.toml  Justfile  README  README.md  conanfile.txt  setup.sh
src/: example.cpp  main.cpp  main.rs
src/graphics/: CMakeLists.txt  draw.cpp  draw.h
src/helloworld/: gameoflife.rs  mod.rs
src/physics/: CMakeLists.txt
src/subdir_example/: CMakeLists.txt  example.cpp
